[package]
name = "imgup"
version = "0.1.0"
authors = ["Grendel <jcg@grendel.world>"]
edition = "2021"
repository = "https://gitlab.com/cptchuckles/imgup-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"
reqwest = { version = "0.10.4", features = ["blocking","json"] }
serde = { version = "1.0.106", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1.0"
